# fitness-mcp

./: .gitignore  README.md  package-lock.json  pyproject.toml  wrangler.jsonc
cloudflare-worker/: README.md  package.json  tsconfig.json  worker-configuration.d.ts
cloudflare-worker/migrations/: 0001_schema.sql  0002_seed.sql
python/: README.md
python/seeds/: trainer_persona.yaml
python/src/fitness_coach/: cli.py  config.py  mcp_server.py
seeds/: athlete_profile.yaml  decision_rules.yaml  training_program.yaml
src/: index.ts  service.ts
src/fitness_coach/: db.py  models.py  service.py
tests/: test_service.py
