[project]
name = "fitness-coach"
version = "0.1.0"
description = "Local MCP server for AI fitness coaching state."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.scripts]
fitness-coach = "fitness_coach.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
